test/files/neg/t4536a.scala
import language.dynamics

abstract class dynamicClass {
  val x: Dynamic
  x.meth
  x.meth()
  x.meth("a")
}
